🔧 update datasource configuration and upgrade Spring Boot version to 3.4.12 🔧

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: topspot-backend
 
   datasource:
-    url: jdbc:h2:mem:topspotdb
+    url: jdbc:h2:file:./data/topspotdb
     driver-class-name: org.h2.Driver
     username: sa
     password:
